[package]
name = "compbot"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
hashbrown = "0.14.5"
mysql = "25.0.1"
once_cell = "1.19.0"
rand = "0.8.5"
sendgrid = "0.21.0"
serenity = "0.12.2"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
] }
tokio = { version = "1.38.0", features = ["full"] }
